@@ -20,8 +20,7 @@ GRANT SELECT ON team_category     TO `domjudge_public`, `domjudge_plugin`, `domj
 GRANT SELECT ON team_affiliation  TO `domjudge_public`, `domjudge_plugin`, `domjudge_team`;
 
 GRANT SELECT ON event             TO `domjudge_plugin`;
-
-GRANT SELECT ON clarification     TO `domjudge_team`;
+GRANT SELECT ON clarification     TO `domjudge_plugin`, `domjudge_team`;
 GRANT SELECT ON judging           TO `domjudge_team`;
 GRANT SELECT ON submission        TO `domjudge_team`;
 GRANT SELECT ON team_unread       TO `domjudge_team`;
@@ -29,7 +28,8 @@ GRANT SELECT ON team_unread       TO `domjudge_team`;
 -- Team/public/plugin read privileges on specific rows
 GRANT SELECT (judgingid, submitid, result, valid)        ON judging    TO `domjudge_public`, `domjudge_plugin`;
 GRANT SELECT (probid, name, cid, allow_submit, color)    ON problem    TO `domjudge_public`, `domjudge_plugin`;
-GRANT SELECT (submitid, cid, probid, teamid, submittime) ON submission TO `domjudge_public`, `domjudge_plugin`;
+GRANT SELECT (submitid, cid, langid, probid, teamid,
+              submittime)                                ON submission TO `domjudge_public`, `domjudge_plugin`;
 
 GRANT SELECT (langid, name, extension, allow_submit)     ON language   TO `domjudge_team`, `domjudge_plugin`;
 GRANT SELECT (probid, name, cid, allow_submit, color)    ON problem    TO `domjudge_team`;
