@@ -17,6 +17,7 @@ Version 3.2.0 - SVN
  - Create separate execdir subdir for judging. (Closes: #3041492)
  - Replace setuid root installation of runguard with invocation
    via sudo.
+ - Fix missing permissions for plugin interface SQL user.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
